<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:background="@drawable/diastyle"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="Select Location" />

    <Spinner
        android:id="@+id/sloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        android:prompt="@string/t51q" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rback"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bcomlinee"
            android:text="@string/rback"
            android:textColor="#ffffff"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/sawa"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bcomlinee"
            android:text="@string/enda"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>