<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="50dp"
    android:background="#FFFFFF"
    android:layout_margin="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="Report Frost"
        android:textColor="@color/colorRedSpecial"
        android:textStyle="bold"
        android:textSize="17sp" />

    <ScrollView
        android:id="@+id/scrolli"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/nomi11A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:text="Frost Presence"
                android:textSize="16sp" />



            <RadioGroup
                android:id="@+id/radiops11A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi11A"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/prevv11A"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@drawable/a"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/neww11A"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@drawable/a"
                    android:text="No" />
            </RadioGroup>


            <TextView
                android:id="@+id/nomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/radiops11A"
                android:textColor="#000000"
                android:text="Estimated of Area Affected"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/s2qqq"
                android:layout_alignLeft="@+id/nomi11A"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi"
                android:layout_marginTop="3dp"
                android:weightSum="1"
                >

                <Spinner
                    android:id="@+id/s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nomi"
                    android:layout_weight="0.4"
                    android:entries="@array/t31A"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:prompt="@string/t51qA" />

                <Spinner
                    android:id="@+id/s2x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tunits"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_weight="0.6"
                    android:prompt="@string/tunit" />



            </LinearLayout>

            <TextView
                android:id="@+id/nomi303"
                android:layout_below="@+id/s2qqq"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Severity of the Damage"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s3"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi303"
                android:layout_marginTop="3dp"
                android:entries="@array/t31q"
                android:prompt="@string/t52q" />


            <TextView
                android:id="@+id/nomi6A"
                android:layout_below="@+id/s3"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Current Weather"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s6A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi6A"
                android:layout_marginTop="3dp"
                android:layout_alignLeft="@+id/nomi11A"
                android:entries="@array/t34qA"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:prompt="@string/t55qA" />

            <TextView
                android:id="@+id/nomi4"
                android:layout_below="@+id/s6A"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Current Cloud Cover"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/t32q"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:prompt="@string/t53q"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/nomi4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:id="@+id/nomi5"
                android:layout_below="@+id/s4"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Current Wind Speed Estimate"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi5"
                android:layout_marginTop="3dp"
                android:layout_alignLeft="@+id/nomi11A"
                android:entries="@array/t33q"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:prompt="@string/t54q" />


            <TextView
                android:id="@+id/nomi8"
                android:layout_below="@+id/s5"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Last Rain Day"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s8"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi8"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_marginTop="3dp"
                android:entries="@array/t35q"
                android:prompt="@string/t57q" />



            <TextView
                android:id="@+id/nomi11"
                android:layout_below="@+id/s8"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:text="Received Forecast from RCMRD?"
                android:textSize="16sp" />



            <RadioGroup
                android:id="@+id/radiops11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi11"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/prevv11"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@drawable/a"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/neww11"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@drawable/a"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/nomi12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radiops11"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_marginTop="15dp"
                android:text="Scenario Photograph"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/profpic"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/nomi12"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s12pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/noimage" />

                <Button
                    android:id="@+id/bfopic"
                    android:layout_width="150dp"
                    android:layout_centerInParent="true"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/comlinee"
                    android:text="Take Photo"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/nomi1212"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:layout_alignLeft="@+id/nomi11A"
                android:textSize="16sp"
                android:layout_below="@+id/profpic"
                android:text="Comments" />


            <EditText
                android:id="@+id/s811"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@+id/nomi1212"
                android:layout_alignLeft="@+id/nomi11A"
                android:layout_marginTop="3dp"
                android:background="@drawable/comline"
                android:gravity="top"
                android:hint="give a brief description"
                android:inputType="textMultiLine"
                android:padding="4dp" />

        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/comlinee"
            android:text="@string/rback"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/doneo"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:background="@drawable/comlinee"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:text="@string/savo" />




    </RelativeLayout>

</LinearLayout>